--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,10 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
   routemaster: ^1.0.1
-  flutter_riverpod: ^2.3.4
+  flutter_riverpod: ^2.3.5
+  go_router: ^6.5.7
 
 dev_dependencies:
   flutter_test:
