--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   go_router: ^6.5.7
   firebase_core: ^2.10.0
   firebase_auth: ^4.4.2
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
